[package]
name = "headless_sns_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.72"
chrono = "0.4.26"
dotenv = "0.15.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
